{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 685,
  "lineage": "927b7aa0-bc94-1779-2eae-4e40aee72ab9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:vpc/vpc-0c42b398c2831df05",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0336a0bd91f89a279",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-05bcf0266fac69461",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Environment",
                "values": [
                  "demo"
                ]
              }
            ],
            "id": "vpc-0c42b398c2831df05",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08dab509e94d3b640",
            "owner_id": "186319575019",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_blue_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:security-group/sg-048166eae2d441091",
            "description": "Allow ports for java app demo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048166eae2d441091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8983,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8983
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9002
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0a5b4ef8c14575496"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform_blue_practice",
            "name_prefix": "",
            "owner_id": "186319575019",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:security-group/sg-0a5b4ef8c14575496",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-048166eae2d441091"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5b4ef8c14575496",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-alb20230310101546584100000004",
            "name_prefix": "example-alb",
            "owner_id": "186319575019",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "data.aws_availability_zones.available",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "data.aws_vpc.selected",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_route_propagation.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a039d4acc1b10566",
            "association_id": "eipassoc-0c2c4aac33eb143f1",
            "domain": "vpc",
            "id": "eipalloc-0a039d4acc1b10566",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02ce0c318aef028ad",
            "private_dns": "ip-10-0-101-209.ap-south-1.compute.internal",
            "private_ip": "10.0.101.209",
            "public_dns": "ec2-15-207-229-159.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.229.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:internet-gateway/igw-0508c0ca520a763fa",
            "id": "igw-0508c0ca520a763fa",
            "owner_id": "186319575019",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a039d4acc1b10566",
            "connectivity_type": "public",
            "id": "nat-041f8012303347a3c",
            "network_interface_id": "eni-02ce0c318aef028ad",
            "private_ip": "10.0.101.209",
            "public_ip": "15.207.229.159",
            "subnet_id": "subnet-0f75546e44de46e09",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-ap-south-1a"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-ap-south-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-080165b1d1738c0821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-041f8012303347a3c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080165b1d1738c082",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0508c0ca520a763fa",
            "id": "r-rtb-0937e7da1c27d15c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0937e7da1c27d15c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:route-table/rtb-080165b1d1738c082",
            "id": "rtb-080165b1d1738c082",
            "owner_id": "186319575019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-041f8012303347a3c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:route-table/rtb-0937e7da1c27d15c7",
            "id": "rtb-0937e7da1c27d15c7",
            "owner_id": "186319575019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0508c0ca520a763fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd18dbf30c33ef4",
            "route_table_id": "rtb-080165b1d1738c082",
            "subnet_id": "subnet-004e2fcbbb6e449ac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0832efc2cec4b6232",
            "route_table_id": "rtb-080165b1d1738c082",
            "subnet_id": "subnet-01bd14e1bd055ff99"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011d776845258bc28",
            "route_table_id": "rtb-080165b1d1738c082",
            "subnet_id": "subnet-0169a3808fe82c8e1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064b5e992cd08630f",
            "route_table_id": "rtb-0937e7da1c27d15c7",
            "subnet_id": "subnet-0f75546e44de46e09"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac7bd33df3c77d24",
            "route_table_id": "rtb-0937e7da1c27d15c7",
            "subnet_id": "subnet-03fb66bda79949191"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062c0ba90d50d654d",
            "route_table_id": "rtb-0937e7da1c27d15c7",
            "subnet_id": "subnet-0793315b966cd59b6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-004e2fcbbb6e449ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004e2fcbbb6e449ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1a",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1a",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-01bd14e1bd055ff99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bd14e1bd055ff99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1b",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1b",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-0169a3808fe82c8e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0169a3808fe82c8e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1c",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-private-ap-south-1c",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-0f75546e44de46e09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75546e44de46e09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1a",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-03fb66bda79949191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fb66bda79949191",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1b",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:subnet/subnet-0793315b966cd59b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0793315b966cd59b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "186319575019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1c",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc-public-ap-south-1c",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c42b398c2831df05"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:186319575019:vpc/vpc-0c42b398c2831df05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d2cb98693e1e6b17",
            "default_route_table_id": "rtb-08dab509e94d3b640",
            "default_security_group_id": "sg-0a322a5e8b3c39547",
            "dhcp_options_id": "dopt-05bcf0266fac69461",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c42b398c2831df05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08dab509e94d3b640",
            "owner_id": "186319575019",
            "tags": {
              "Environment": "demo",
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}